--- a/main.css
+++ b/main.css
@@ -1,12 +1,46 @@
 /* change var */
 :root {
     --bs-primary: #FB541D;
-    --bs-primary-rgb: rgb(251,84,29);
+    --bs-primary-rgb: 251, 84, 29;
     --bs-secondary: #D29C9C;
-    --bs-secondary-rgb: rgb(210,156,156);
+    --bs-secondary-rgb: 210, 156, 156;
     --bs-info: #87AEBF;
-    --bs-info-rgb: rgb(135,174,191);
+    --bs-info-rgb: 135, 174, 191;
     --dark: rgb(7, 7, 7);
+}
+
+/* adjust the color of the button and hovering over it */
+.btn-outline-primary {
+    --bs-btn-color: black;
+    --bs-btn-bg: white;
+    --bs-btn-border-color: var(--bs-primary);
+    --bs-btn-hover-bg: var(--bs-primary);
+    --bs-btn-hover-border-color: var(--bs-primary);
+    --bs-btn-focus-shadow-rgb: 13, 110, 253;
+    --bs-btn-active-color: black;
+    --bs-btn-active-bg: var(--bs-primary);
+    --bs-btn-active-border-color: var(--bs-primary);
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: white;
+    --bs-btn-disabled-bg: transparent;
+    --bs-btn-disabled-border-color: grey;
+}
+
+.btn-primary {
+    --bs-btn-color: black;
+    --bs-btn-bg: var(--bs-primary);
+    --bs-btn-border-color: var(--bs-primary);
+    --bs-btn-hover-color: black;
+    --bs-btn-hover-bg: var(--bs-info);
+    --bs-btn-hover-border-color: var(--bs-info);
+    --bs-btn-focus-shadow-rgb: 49, 132, 253;
+    --bs-btn-active-color: black;
+    --bs-btn-active-bg: var(--bs-info);
+    --bs-btn-active-border-color: var(--bs-info);
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #fff;
+    --bs-btn-disabled-bg: grey;
+    --bs-btn-disabled-border-color: grey;
 }
 
 /* skip links */
@@ -56,6 +90,7 @@ h2,
 h3,
 h4 {
     font-family: "Spectral", serif;
+    font-weight: 400;
     font-style: normal;
 }
 
@@ -84,15 +119,41 @@ h4 {
 
 h5 {
     font-size: 1.1777rem;
+    line-height: 2.79375rem;
 }
 
 h6 {
     font-size: 1.333rem;
 }
 
-
-/* navigation bar */
-/* main logo */
+/* put the logo into a set width */
 .logo {
     width: 200px;
+}
+
+/* put bg image to the banner */
+.banner {
+    background: url(./images/flower-banner.jpg) no-repeat center;
+    background-size: cover;
+    opacity: 0.8;
+}
+
+.about-me {
+    background: url(./images/flower-about.jpg) no-repeat center;
+    background-size: cover;
+    opacity: 0.8;
+}
+
+/* No background in mobile mode */
+@media screen and (max-width: 576px) {
+    .banner, .about-me {
+        background-image: none;
+    }
+}
+
+/* Set height for the projects card in desktop mode */
+@media screen and (min-width: 992px) {
+    .prj {
+        height: 670px;
+    }
 }
