--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,8 @@
     --bs-btn-disabled-border-color: grey;
 }
 
+
+
 /* skip links */
 .skip-links {
     list-style: none;
@@ -67,6 +69,7 @@
 /* global fonts & sizes */
 html {
     font-family: "Baloo 2", sans-serif;
+    font-weight: 400;
     font-size: 14px;
 }
 
@@ -88,7 +91,11 @@ html {
 h1,
 h2,
 h3,
-h4 {
+h4,
+.h1,
+.h2,
+.h3,
+.h4 {
     font-family: "Spectral", serif;
     font-weight: 400;
     font-style: normal;
@@ -101,32 +108,45 @@ h4 {
 }
 
 /* heading size with 1.333 scale */
-h1 {
+h1, .h1 {
     font-size: 5.61rem;
 }
 
-h2 {
+h2, .h2 {
     font-size: 4.209rem;
 }
 
-h3 {
+h3, .h3 {
     font-size: 3.157rem;
 }
 
-h4 {
+h4, .h4 {
     font-size: 2.369rem;
 }
 
-h5 {
+h5, .h5 {
     font-size: 1.1777rem;
+    font-weight: 400;
     line-height: 2.79375rem;
 }
 
-h6 {
+h6, .h6 {
     font-size: 1.333rem;
+    font-weight: 400;
 }
 
 /* put the logo into a set width */
 .logo {
     width: 200px;
+}
+
+/* dress the menu items when hovering */
+.item-1:hover,
+.item-1:active {
+    background-color: #FB541D;
+}
+
+.item-2:hover,
+.item-2:active {
+    background-color: #87AEBF;
 }
