--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@
     --bs-info: #87AEBF;
     --bs-info-rgb: 135, 174, 191;
     --dark: rgb(7, 7, 7);
+    --animate-duration: 1000ms;
+    --animate-delay: 2s;
 }
 
 /* adjust the color of the button and hovering over it */
@@ -108,29 +110,35 @@ h4,
 }
 
 /* heading size with 1.333 scale */
-h1, .h1 {
+h1,
+.h1 {
     font-size: 5.61rem;
 }
 
-h2, .h2 {
+h2,
+.h2 {
     font-size: 4.209rem;
 }
 
-h3, .h3 {
+h3,
+.h3 {
     font-size: 3.157rem;
 }
 
-h4, .h4 {
+h4,
+.h4 {
     font-size: 2.369rem;
 }
 
-h5, .h5 {
+h5,
+.h5 {
     font-size: 1.1777rem;
     font-weight: 400;
     line-height: 2.79375rem;
 }
 
-h6, .h6 {
+h6,
+.h6 {
     font-size: 1.333rem;
     font-weight: 400;
 }
